<resources>
    <string name="app_name">Remember Me</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_a_member_reg">Not A Member? Register</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="already_member_register">Already a member? Login</string>
    <string name="register">Register</string>
    <string name="entermasterpassword">ENTER YOUR MASTER PASSWORD</string>
    <string-array name="category">
        <item>Google</item>
        <item>Facebook</item>
        <item>Twitter</item>
        <item>Yahoo</item>
        <item>Pintrest</item>
        <item>Redit</item>
        <item>Instagram</item>
        <item>Rediff</item>
        <item>Other</item>
    </string-array>
</resources>
