<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include layout="@layout/include_toolbar"
             android:id="@+id/toolbar_new"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entermasterpassword"
        android:id="@+id/hint"
        android:textColor="@color/primary"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"


        android:layout_below="@+id/toolbar_new"

        android:textSize="20sp"/>


    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="10dp"
        android:id="@+id/password_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hint">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="MasterPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/icons"
        android:background="@drawable/primary_button"
        android:layout_below="@id/password_layout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a_member_reg"
        android:id="@+id/goToRegister"
        android:textColor="@color/primary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>
